# FolderFlow

./: .gitattributes  CONTRIBUTORS.md  README.md  dry_run.py  env_setup.py  file_organizer.py  pyproject.toml  test.py  utils.py
src/folderflow/: dry_run.py  env_setup.py  file_organizer.py
