[project]
name = "folderflow"
version = "0.1.0"
description  = "Organize cluttered directories with ease"
authors = [
    {name = "Varun Bhattacharya"},
    {name = "Prateek Sharma"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich"
]


[project.scripts]
folderflow = "folderflow.file_organizer:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"folderflow" = ["requirements.txt"]